ZumZumFinancials_Dev1/src/objects/Ledger_Payment_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction_Number__c</fullName>
        <label>Parent Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction__c</fullName>
        <label>Parent Transaction</label>
        <referenceTo>Ledger__c</referenceTo>
        <relationshipLabel>Ledger Payment History</relationshipLabel>
        <relationshipName>Ledger_Payment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Number__c</fullName>
        <label>Payment Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Ledger Payment History</label>
    <nameField>
        <label>Ledger Payment History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledger Payment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>